use-cases/acl/gateways/enterprise-kgateway-acl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: enterprise-kgateway-acl
spec:
  controllerName: solo.io/enterprise-kgateway
  parametersRef:
    group: enterprisekgateway.solo.io
    kind: EnterpriseKgatewayParameters
    name: ent-kgateway-acl-params
    namespace: kgateway-system
